# VideoProcessingFramework

./: .gitignore  CMakeLists.txt  SampleDecodeMultiThread1.py  SampleDemuxDecode.py  benchmark.dockerfile  build.bat  build.sh  dependencies.txt  docker_build_benchmark.sh  ffmpeg.txt  pytest.ini  requirements.txt  test_vpf.py
.devcontainer/: Dockerfile  devcontainer.json
PyNvCodec/: CMakeLists.txt
PyNvCodec/TC/: CMakeLists.txt
PyNvCodec/TC/TC_CORE/: CMakeLists.txt
PyNvCodec/TC/inc/: CodecsSupport.hpp  FFmpegDemuxer.h  H264BitStreamParser.hpp  MemoryInterfaces.hpp  NvDecoder.h  Tasks.hpp  TasksParser.hpp
PyNvCodec/TC/src/: FFmpegDemuxer.cpp  FfmpegSwDecoder.cpp  H264BitStreamParser.cpp  MemoryInterfaces.cpp  NvDecoder.cpp  Tasks.cpp  TasksColorCvt.cpp  TasksParser.cpp  TasksPreprocess.cpp
PyNvCodec/inc/: PyNvCodec.hpp
PyNvCodec/src/: PyNvCodec.cpp
PytorchNvCodec/: CMakeLists.txt
benchmark/: __main__.py  avf_reader.py  vpf_decoder_benchamark.py  vpf_decoder_benchamark_avf.py
benchmark/data_models/: v_frame_meta.py
sample_decode/: CMakeLists.txt
sample_decode/src/: AVFReader.cpp  AVFReader.h  Vtype.h  Vtype_MIDT.h  benchmark_vpf.cpp  benchmark_vpf_avf.cpp  benchmark_vpf_avf_c.cpp  benchmark_vpf_cpu_avf.cpp  sample_decode.cpp  utils.cpp  utils.hpp
